Generate client by Swagger.
